the routes are showing and it is in my test database
