# models/users.js
@@ -32,3 +32,23 @@ const UserSchema = mongoose.Schema({
 });
 
 module.exports = mongoose.model('Users', UserSchema);
+
+
+// Audio:
+// Title
+// audio type (podcast, audiobook, music)
+// Description
+// Link
+// By (array with author, performers, or speakers)
+// Release date (optional)
+// Length 
+// Video:
+// Title
+// Video type (video game, video)
+// Description
+// Link
+// Release date
+// Docs:
+// Title
+// Doctype (pdf, txt, docs, excel)
+// Description
