# routes/index.js
@@ -3,5 +3,8 @@ const router = express.Router();
 
 router.use('/users', require('./users'));
 router.use('/events', require('./events'));
+router.use('/audio', require('./audio'));
+router.use('/video', require('./video'));
+//router.use('/documents', require('./documents.js'));
 
 module.exports = router;
